# Doktores

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: research-loop.yml
docs/: extend_demo_klein_bottle.md  extend_demo_thin_klein_synthesis.md  extend_demo_thin_wall.md
examples/: handoff.json
src/doktores/: __init__.py  cli.py  experimenter.py  extend.py  falsifier.py  io_joni.py  io_kevin.py  literature.py  llm_client.py  methodologist.py  models.py  orchestrator.py  paper.py  paper_builder.py  reviewer.py  theorist.py
src/doktores/examples/: __init__.py  rg_paper.py
src/doktores/kevin/: __init__.py  _parallel.py  llm_client.py  method_library.py  models.py  orchestrator.py  selector.py  solution_space.py  space_predictor.py  wild_brother.py
tests/: test_cli.py  test_extend.py  test_io.py  test_joni_contract.py  test_kevin_embedded.py  test_models.py  test_multimodel.py  test_orchestrator.py  test_paper_improver.py  test_parallel.py  test_roles.py
